--- a/NeuralNetwork/NeuralNetwork.csproj
+++ b/NeuralNetwork/NeuralNetwork.csproj
@@ -43,8 +43,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConstantNeuron.cs" />
+    <Compile Include="functions.cs" />
+    <Compile Include="HiddenNeuron.cs" />
+    <Compile Include="InputNeuron.cs" />
+    <Compile Include="NeuralNetwork.cs" />
+    <Compile Include="Neuron.cs" />
+    <Compile Include="OutputNeuron.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Synapsis.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
